--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ body {
     background-color: black;
     box-shadow: 2px 0 2px 10px var(--clr-mughal-green);
     height: 5rem;
-    margin-bottom: 5rem;
+    margin-bottom: 12vh;
 }
 
 #logo-homepage {
