--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ body {
     line-height: 2.1rem;
     margin: .5rem auto;
     height: 2.1rem;
-    width: 16rem;
+    width: 14rem;
     text-align: center;
     text-transform: uppercase;
 }
@@ -131,7 +131,7 @@ body {
     line-height: 2.1rem;
     margin: .5rem auto;
     height: 2.1rem;
-    width: 16rem;
+    width: 14rem;
     text-transform: uppercase;
 }
 /* HOME PAGE [End] */
@@ -884,6 +884,22 @@ nav {    /* contains logo & nav menu */
         font-size: 2.2rem;
         top: 2.8rem;
     }
+
+    #play-button {
+        font-size: 1.3rem;
+    }
+    
+    #howtoplay-btn-homepage {
+        font-size: 1.1rem;
+    }
+
+    #play-button,
+    #howtoplay-btn-homepage {
+        height: 2.4rem;
+        line-height: 2.4rem;
+        width: 16rem;
+    }
+
 
     /* GAME PAGE */
     #gamepage-body {
