Create and add classes for background color and border to lightboxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,14 @@
     background-color: var(--clr-deep-moss);
 }
 
+.lightbox-bgcolor {    /* lightbox background color */
+    background-color: var(--clr-raisin-black);
+}
+
+.lightbox-border {
+    box-shadow: 0 0 5px 4px var(--clr-deep-moss);
+}
+
 /* Remove Default Global Styles */
 * { 
     color: var(--clr-white);
@@ -450,8 +458,6 @@ nav {    /* contains logo & nav menu */
 
 /* ENTER NAME Lightbox [Start] */
 #username-inner-wrapper {
-    background-color: var(--clr-raisin-black);
-    border: 2px solid var(--clr-sea-green);
     box-sizing: border-box;
     display: flex;
     align-items: center;
@@ -519,8 +525,6 @@ nav {    /* contains logo & nav menu */
 
 /* HOW TO PLAY Lightbox [Start] */
 #howtoplay-inner-wrapper {
-    background-color: var(--clr-raisin-black);
-    border: 2px solid var(--clr-snow);
     display: flex;
     flex-direction: column;
     font-size: .9rem;
@@ -541,7 +545,7 @@ nav {    /* contains logo & nav menu */
 }
 
 #close-howtoplay {    /* 'x' close icon */
-    color: var(--clr-sea-green);
+    color: var(--clr-burlywood);
     font-size: 2.5rem;
     position: sticky;
     top: 0;
@@ -549,7 +553,7 @@ nav {    /* contains logo & nav menu */
 
 #howtoplay-heading {
     border-bottom: 2px solid var(--clr-burlywood);
-    color: var(--clr-sea-green);
+    color: var(--clr-dark-sea);
     font-size: 1.8rem;
     line-height: 3rem;
     text-align: center;
@@ -596,8 +600,6 @@ nav {    /* contains logo & nav menu */
 
 /* GAME OVER Lightbox [Start] */
 #gameover-inner-wrapper {
-    background-color: var(--clr-raisin-black);
-    border: 2px solid var(--clr-sea-green);
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -641,7 +643,6 @@ nav {    /* contains logo & nav menu */
 /* GAME WON Lightbox [Start] */
 #gamewon-inner-wrapper {
     background-color: #b3b354;
-    border: 2px solid var(--clr-deep-moss);
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -697,8 +698,6 @@ nav {    /* contains logo & nav menu */
 
 /* QUIT Lightbox [Start] */
 #quit-inner-wrapper {
-    background-color: var(--clr-raisin-black);
-    border: 2px solid var(--clr-sea-green);
     display: flex;
     align-items: center;
     flex-direction: column;
